fixing problem with gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -278,9 +278,12 @@ label{
 }
 
 @media (max-width: 800px) {
-  body{
+  html, body{
     width: 100%;
-    margin: 0;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
   }
   header { 
     
